# qdgeo

./: .gitignore  README.md  pyproject.toml  setup.py  setup_git.sh  test_ci_locally.sh  test_gradient.py  test_single_mol.py
.github/workflows/: tests.yml
qdgeo/: __init__.py  build_mol.py  optimize_mol.py
qdgeo/src/: builder.cpp  builder.hpp  cart.h  cgmin.c  cgmin.h  coord.hpp  fns.c  fns.h  geograd.cpp  geograd.hpp  lbfgs.hpp  optimizer.cpp  optimizer.hpp  out.hpp  python_bindings.cpp
tests/: test_qdgeo.py
