[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qdgeo"
version = "0.1.0"
description = "Quick and dirty molecular geometry conformation optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.19.0",
    "rdkit>=2022.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools]
packages = ["qdgeo"]
